--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - ./django/src:/code
     ports:
       - "8000:8000"
+    depends_on:
+      - db
     command: python manage.py runserver 0.0.0.0:8000
   
   db:
