update: compose mysql user and db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,7 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: todo_db
+      MYSQL_USER: worker
+      MYSQL_PASSWORD: password
