--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.6
 
 ENV PYTHONUNBUFFERED 1
-ENV LANG en_US.utf8
+ENV LANG ja_JP.UTF-8
+ENV LANGUAGE ja_JP.UTF-8
+ENV LC_ALL ja_JP.UTF-8
 
 RUN mkdir /code
 WORKDIR /code
