--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
   
   db:
-    image: mysql:5.7
+    image: postgres:10.5
     restart: always
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    ports:
+      - 5432:5432
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: todo_db
-      MYSQL_USER: worker
-      MYSQL_PASSWORD: password
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_INITDB_ARGS="--encoding=UTF-8"
+      - POSTGRES_DB=todo_db
