--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,5 @@ services:
       MYSQL_DATABASE: todo_db
       MYSQL_USER: worker
       MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
